# GDC-MJ-Target-POC

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yml  test.yml
target_mssqltarget/: __init__.py  __main__.py  connector.py  connector_old.py  sinks.py  sinks_old.py  target.py
tests/: __init__.py  test_core.py
