[tool.poetry]
name = "target-mssqltarget"
version = "0.0.1"
description = "Singer target for mssqltarget, built with the Meltano Singer SDK."
authors = ["FirstName LastName <firstname.lastname@example.com>"]
keywords = ["ELT", "mssqltarget"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
singer-sdk = "^0.44.3"
pymssql = ">=2.2.5"
sqlalchemy = "^1.4"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.poetry.dev-dependencies]
pytest = ">=8"
singer-sdk = { version = "~0.44.3", extras = ["testing"] }

[tool.poetry.scripts]
target-mssqltarget = "target_mssqltarget.target:Targetmssqltarget.cli"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff.lint]
ignore = ["COM812"]  # missing-trailing-comma
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
